samples/_failures_safe/1761418248_a0329b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ceefe74.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6ceefe74.c:164:13: error: expected declaration or statement at end of input
  164 |             }
      |             ^
./samples/SAFE/__tmp_6ceefe74.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ceefe74.c:164:13: error: expected declaration or statement at end of input
